# iraikosu0

./: hao.cpp  orewazi.java  shima.cpp  test.cpp  yln.cpp
GO_workspace/: main.go
GO_workspace/Communication/: main.go  server.go  user.go
GO_workspace/Communication/Client/: client  client.go
GO_workspace/allto/: go.mod  go.sum  index.html  main.go
GO_workspace/bubble/: go.mod  go.sum  main.go
GO_workspace/gin work/: 1.go  2.go  3.go  go.mod  go.sum  main.go  main1.go
GO_workspace/go_redis/: go.mod  main.go
GO_workspace/gorm_mysql/: go.mod  main.go
GO_workspace/lib1/: lib1.go
GO_workspace/shortlink/: go.mod  go.sum  main.go
GO_workspace/test0/lib2/: lin2.go
GO_workspace/test1/: go.mod  go.sum  main.go
LibraryManagementSystem __0/: CMakeLists.txt
LibraryManagementSystem __0/data/: sample_data.sql
LibraryManagementSystem __0/docs/: api_documentation.md  database_schema.sql
LibraryManagementSystem __0/include/: Book.hpp  BorrowManager.hpp  Database.hpp  LibraryUI.hpp  Reader.hpp
LibraryManagementSystem __0/src/: Book.cpp  BorrowManager.cpp  Database.cpp  LibraryUI.cpp  ReportGenerator.cpp  main.cpp
LibraryManagementSystem __0/tests/: test_book.cpp  test_borrow.cpp
LibraryManagementSystem000/: CMakeLists.txt
LibraryManagementSystem000/src/: BookManager.cpp  Books.cpp  BorrowManager.cpp  Database.cpp  LibraryUI.cpp  Reader.cpp  ReaderManager.cpp  SystemManager.cpp  borrowBookProcess.cpp  returnBookProcess.cpp
